# phi-finder

./: .codespell-ignorewords  .coveragerc  .flake8  .gitignore  README.md  anonymyse_dicom.py  conftest.py  demo.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  release.yml
dicom_tools/: __init__.py  anonymise_dicom.py
ml_anonymisation/: _version.py
ml_anonymisation/dicom_tools/: anonymise_dicom.py  utils.py
ml_anonymisation/dicom_tools/tests/: test_data_row_access.py
phi_finder/: _version.py
phi_finder/dicom_tools/: __init__.py  anonymise_dicom.py  ps3_15.py  utils.py
phi_finder/dicom_tools/tests/: test_anonymise_dicom.py  test_data_row_access.py  test_ps3_15.py
