[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ml_anonymisation"
description = "Collection of tools to check uploaded scans and records for identifiable data."
readme = "README.md"
version = "2025.3.0"
requires-python = ">=3.10,<4.0"
dependencies = ["typing_extensions >=4.6.3; python_version < '4.0'",
                "pydicom==3.0.1",
                "numpy",
                "pandas==2.2.3",
                "faker==36.1.1",
                "presidio_structured==0.0.4a0",
                "presidio-image-redactor==0.0.53",
                "presidio_analyzer==2.2.355",
                "presidio_anonymizer==2.2.355",
                "spacy",
                "PyMuPDF==1.24.13",
                "pikepdf==9.4.0",
                "pdfminer.six==20240706",
                "opencv-python==4.10.0.84",
                "transformers==4.48.2",
                "torch",
                "dicognito==0.18.0",
]

authors = [{ name = "Pedro Faustini", email = "pedro.faustini@mq.edu.au" }]
maintainers = [{ name = "Pedro Faustini", email = "pedro.faustini@mq.edu.au" }]
keywords = [
    "anonymisation",
    "dicom",
    "clinical data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "codespell",
    "flake8",
    "flake8-pyproject",
    "fileformats[test]",
    "mypy >=1.5.1",
    "pydata-sphinx-theme >=0.13",
    "pydicom",                    # for typing
]
test = [
    "mypy >=1.5.1",
    "pytest >=6.2.5",
    "pytest-env>=0.6.2",
    "pytest-cov>=2.12.1",
    "pydra >0.24",
    "fileformats-extras",
]
docs = [
    "packaging",
    "docutils>=0.10",
    "mock>1.0",
    "sphinx >=2.1.2",
    "sphinx-argparse>=0.2.0",
    "sphinx-click>=3.1",
    "furo>=2022.2.14.1",
    "numpydoc>=0.6.0",
]

[project.urls]
repository = "https://github.com/Australian-Imaging-Service/ml-anonymisation"


[tool.hatch.build.targets.wheel]
packages = ["dicom_tools"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    "tests",
    "scripts",
    "docs",
    "build",
    "dist",
    "fileformats/core/_version.py",
]


[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = ["__init__.py:F401"]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129', 'W503']