[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ml-anonymisation"
description = "Collection of tools to check uploaded scans and records for identifiable data."
readme = "README.md"
version = "2025.5.0"
requires-python = ">=3.11,<3.13"
dependencies = ["typing_extensions >=4.6.3; python_version < '4.0'",
                "numpy >=1.26.4",
                "pandas>=2.2.3",
                "faker>=36.1.1",
                "presidio_structured>=0.0.4a0",
                "presidio-image-redactor>=0.0.53",
                "presidio_analyzer>=2.2.355",
                "presidio_anonymizer>=2.2.355",
                "spacy==3.8.2",
                "PyMuPDF>=1.24.13",
                "pikepdf>=9.4.0",
                "pdfminer.six>=20240706",
                "opencv-python>=4.10.0.84",
                "transformers>=4.48.2",
                "torch==2.2.0",
                "dicognito>=0.17.0",
                "fileformats-medimage-extras",
]

authors = [{ name = "Pedro Faustini", email = "pedro.faustini@mq.edu.au" }]
maintainers = [{ name = "Pedro Faustini", email = "pedro.faustini@mq.edu.au" }]
keywords = [
    "anonymisation",
    "dicom",
    "clinical data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "codespell",
    "flake8",
    "flake8-pyproject",
    "fileformats[test]",
    "mypy >=1.5.1",
    "pydata-sphinx-theme >=0.13",
    "pydicom",                    # for typing
]
test = [
    "mypy >=1.5.1",
    "pytest >=6.2.5",
    "pytest-env>=0.6.2",
    "pytest-cov>=2.12.1",
    "pydra @ git+https://github.com/nipype/pydra@develop",
    "frametree-xnat >=0.6.4",
    "xnat4tests >=0.3.12",
    "medimages4tests >=0.5.7",
    "fileformats-extras",
    "fileformats-medimage-extras",
    "xnat >=0.7.0"
]
docs = [
    "packaging",
    "docutils>=0.10",
    "mock>1.0",
    "sphinx >=2.1.2",
    "sphinx-argparse>=0.2.0",
    "sphinx-click>=3.1",
    "furo>=2022.2.14.1",
    "numpydoc>=0.6.0",
]

[project.urls]
repository = "https://github.com/Australian-Imaging-Service/ml-anonymisation"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "ml_anonymisation/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["ml_anonymisation"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["ml_anonymisation"]
exclude = ["tests"]
include = ["./ml_anonymisation"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    "tests",
    "scripts",
    "docs",
    "build",
    "dist",
    "ml_anonymisation/_version.py",
]

# [tool.poetry]
# name = "ml-anonymisation"
# version = "2025.4.0"
# description = "Collection of tools to check uploaded scans and records for identifiable data."
# authors = ["Pedro Faustini"]

[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = ["__init__.py:F401"]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129', 'W503']